[package]
name = "pushout"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "A graph rewriting library built on petgraph."
repository = "https://github.com/Finradon/pushout"
homepage = "https://github.com/Finradon/pushout"
readme = "README.md"


[dependencies]
petgraph = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"